Fixed reciept line border pattern scaling and looking glitchy/overlapping.

--- a/terminal-frontend/src/components/billing-popup-window/style.css
+++ b/terminal-frontend/src/components/billing-popup-window/style.css
@@ -1,5 +1,6 @@
 .popup-children-container > div > .orderList > li {
   font-size: 32px;
+  margin-top: 3px;
 }
 
 .popup.billingOptions > div > div > .popup-children-container > .indentedContent > .orderList > li:last-child {
@@ -14,7 +15,20 @@
 
 .orderList > li > .price {
   border-left: 3px dashed grey;
-  padding: 5px
+  padding-left: 5px;
+  position: relative;
+}
+.orderList > li:last-child > .price:before {
+  content: " ";
+
+  display: block;
+  width: 0;
+  height: 33px;
+  border-left: 3px dashed grey;
+
+  position: absolute;
+  top: 46px;
+  left: -3px;
 }
 
 .billingTotal {
@@ -24,11 +38,10 @@
 .billingTotal .totalText {
   padding-right: 14px;
   color: grey;
-  border-right: 3px dashed grey;
 }
 
 .billingTotal .totalAmount {
-  margin-left: 5px;
+  margin-left: 9px;
 }
 
 div.popup.billingOptions > div > div > div.popup-children-container > div.indentedContent > .orderList {
